@@ -213,8 +213,12 @@
                  typespec))
         (when name (setf (gethash name *c-type-table*) c-type))
         c-type)
-      (error (TEXT "FFI type should be a symbol, not ~S")
-             typespec))
+      (if (stringp typespec)
+        (let ((c-type (parse-foreign-inttype typespec)))
+          (when name (setf (gethash name *c-type-table*) c-type))
+          c-type)
+        (error (TEXT "FFI type should be a symbol, not ~S")
+               typespec)))
     (flet ((invalid (typespec)
              (error (TEXT "Invalid FFI type: ~S")
                     typespec))
@@ -453,7 +457,7 @@
                (list slot (deparse slottype)))
              (deparse (ctype)
                (or (cdr (assoc ctype alist :test #'eq))
-                   (if (symbolp ctype)
+                   (if (or (symbolp ctype) (stringp ctype))
                      ;; <simple-c-type>, c-pointer, c-string
                      (new-type ctype ctype)
                      (let ((typespec (list (svref ctype 0))))
