@@ -1390,6 +1390,7 @@ LISPFUNN(set_foreign_pointer,2)
 LISPFUNNR(unsigned_foreign_address,1)
 LISPFUNNR(foreign_address_unsigned,1)
 LISPFUNNR(foreign_address,1)
+LISPFUNNF(parse_foreign_inttype,1)
 LISPFUN(foreign_function,seclass_read,2,0,norest,key,1,(kw(name)) )
 LISPFUNN(sizeof,1)
 LISPFUNN(bitsizeof,1)
